<resources>
    <string name="app_name">ReferenceApp</string>
    <string name="placeholder">Placeholder Text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_success_message">You are logged on as admin</string>
    <string name="login_fail_message">You gave me the wrong username and password</string>
    <string name="login_button_title">login</string>
    <string name="logout_button_title">logout</string>
    <string name="try_login_again_button_title">try again</string>
    <string name="login_username">admin</string>
    <string name="login_password">password</string>
    <string name="FRAGMENT_ID_BUNDLE_KEY">frag_bundle_key</string>
    <string name="tab_fragment_bundle_key">tab_fragment_bundle_key</string>
    <string name="default_url">http://www.amazon.com</string>
    <string name="spinner_message">Choose a Option</string>
    <string name="spinner_display">Selected: %s</string>
    <string name="radio_button_1">Amazon</string>
    <string name="radio_button_2">Web</string>
    <string name="radio_button_3">Services</string>
    <string name="adf_homepage_headline">AWS Device Farm Sample App for Android</string>
    <string name="adf_homepage_subtitle">version 1</string>
    <string name="bool_value">BOOL</string>
    <string name="default_location_text">Finding Location</string>
    <string name="Latitude_text_label">Lat:</string>
    <string name="longitude_text_label">Long:</string>
    <string name="wifi_text_label">Wifi:</string>
    <string name="bluetooth_text_label">Bluetooth:</string>
    <string name="gps_text_label">GPS:</string>
    <string name="nfc_text_label">NFC:</string>
    <string name="adf_homepage_headline_content_description">Homepage Headline</string>
    <string name="adf_homepage_subheader_content_description">Homepage Subheader</string>
</resources>