<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/small_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_alignTop="@+id/longitude"
        android:text="@string/longitude_text_label"
        android:id="@+id/longitude_display"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_toEndOf="@id/longitude_display"
        android:layout_toRightOf="@id/longitude_display"
        android:layout_marginTop="@dimen/mid_margin"
        android:text="@string/default_location_text"
        android:id="@+id/longitude"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_alignTop="@+id/lat"
        android:text="@string/Latitude_text_label"
        android:id="@+id/lat_display"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_below="@id/longitude"
        android:layout_toEndOf="@id/lat_display"
        android:layout_toRightOf="@id/lat_display"
        android:layout_marginTop="@dimen/mid_margin"
        android:text="@string/default_location_text"
        android:id="@+id/lat"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:id="@+id/wifi_display"
        android:text="@string/wifi_text_label"
        android:layout_alignTop="@+id/wifi" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_marginTop="@dimen/mid_margin"
        android:layout_below="@id/lat"
        android:layout_toEndOf="@id/wifi_display"
        android:layout_toRightOf="@id/wifi_display"
        android:text="@string/bool_value"
        android:id="@+id/wifi"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:id="@+id/bluetooth_display"
        android:text="@string/bluetooth_text_label"
        android:layout_alignTop="@+id/bluetooth" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_marginTop="@dimen/mid_margin"
        android:layout_below="@id/wifi"
        android:layout_toRightOf="@id/bluetooth_display"
        android:layout_toEndOf="@id/bluetooth_display"
        android:text="@string/bool_value"
        android:id="@+id/bluetooth"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:id="@+id/gps_display"
        android:text="@string/gps_text_label"
        android:layout_alignTop="@+id/gps" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_below="@id/bluetooth"
        android:layout_marginTop="@dimen/mid_margin"
        android:text="@string/bool_value"
        android:layout_toEndOf="@id/gps_display"
        android:layout_toRightOf="@id/gps_display"
        android:id="@+id/gps"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:id="@+id/nfc_display"
        android:text="@string/nfc_text_label"
        android:layout_alignTop="@+id/nfc" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textField"
        android:layout_marginTop="@dimen/mid_margin"
        android:layout_below="@id/gps"
        android:layout_toEndOf="@id/nfc_display"
        android:layout_toRightOf="@id/nfc_display"
        android:text="@string/bool_value"
        android:id="@+id/nfc"/>
</RelativeLayout>